[package]
name = "cloudflare-rust-chess"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
chess-engine = { git = "https://github.com/jeremyfee/chess-engine", branch = "game" }
chess_openapi = { path = "./generated/rust_chess_api" }

[profile.release]
lto = true
strip = true
codegen-units = 1


[package.metadata.scripts]
# cargo run-script generate-openapi
generate-openapi = """ \
  openapi-generator generate \
    --input-spec openapi.yaml \
    --generator-name rust \
    --output generated/rust_chess_api \
    --package-name chess_openapi \
&& \
  openapi-generator generate \
    --input-spec openapi.yaml \
    --generator-name typescript \
    --output generated/typescript_chess_api_client \
    --package-name ChessOpenapi
"""
