[package]
name = "cloudflare-rust-chess"
description = "chess api for cloudflare workers"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/jeremyfee/cloudflare-rust-chess"
version = "0.1.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
chess-engine = { git = "https://github.com/jeremyfee/chess-engine", branch = "game" }
chess_openapi = { path = "./generated/rust_chess_api" }
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.31"
thiserror = "1.0.50"
serde = "1.0.192"
serde_json = "1.0.108"
async-trait = "0.1.74"

[profile.release]
lto = true
strip = true
codegen-units = 1


[package.metadata.scripts]
# cargo run-script generate-openapi
generate-openapi = """ \
  openapi-generator generate \
    --input-spec openapi.yaml \
    --generator-name rust \
    --output generated/rust_chess_api \
    --package-name chess_openapi \
&& \
  openapi-generator generate \
    --input-spec openapi.yaml \
    --generator-name typescript \
    --output generated/typescript_chess_api_client \
    --package-name ChessOpenapi
"""
